manifests/helloworld-ingresss.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworldingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - secretName: tls-cert
    hosts:
      - helloworld.com
  rules:
  - host: helloworld.com
    http:
      paths:
      -  path: /
         pathType: Prefix 
         backend:
           service:
               name: helloworld
               port:
                number: 80
                #  - host: helloworld.com
                #   http:
                #      paths:
      -  path: /test
         pathType: Prefix
         backend:
           service:
               name: helloworld
               port:
                number: 443
